Added Navigation Controller
Navigation Controller was added with the status bar color changes as
well as nav bar color changes. Table view and bottom bar added as well.

--- a/MicroPay News/Base.lproj/Main.storyboard
+++ b/MicroPay News/Base.lproj/Main.storyboard
@@ -15,8 +15,27 @@
                     <view key="view" contentMode="scaleToFill" id="OAn-2E-GHX">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AkN-4N-EHk">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem title="Item" id="MW2-J9-pQF"/>
+                                </items>
+                            </toolbar>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MlA-Zu-7b4">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="Purchased Articles" id="MR2-SN-6Op">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="7D5-eA-XBM"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="backButton" destination="MlA-Zu-7b4" id="tGT-WO-6nO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zet-ub-hve" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
