--- a/Main.storyboard
+++ b/Main.storyboard
@@ -181,13 +181,46 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </webView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="un1-on-961">
+                                <rect key="frame" x="0.0" y="475" width="600" height="125"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="4cF-AY-N2p">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="125"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uV6-5u-Nrk">
+                                            <rect key="frame" x="211" y="38" width="179" height="50"/>
+                                            <color key="backgroundColor" red="0.38431372549999998" green="0.76470588240000004" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="9Bl-r3-kAU"/>
+                                                <constraint firstAttribute="width" constant="179" id="mb6-BH-Iew"/>
+                                            </constraints>
+                                            <color key="tintColor" red="0.38431372549999998" green="0.76470588240000004" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            <state key="normal" title="Purchase Article">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="centerY" secondItem="uV6-5u-Nrk" secondAttribute="centerY" id="Ocj-vP-L8k"/>
+                                        <constraint firstAttribute="centerX" secondItem="uV6-5u-Nrk" secondAttribute="centerX" id="x8U-s4-55T"/>
+                                    </constraints>
+                                </view>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="125" id="I6Q-Is-txn"/>
+                                </constraints>
+                                <blurEffect style="extraLight"/>
+                            </visualEffectView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="OOx-MC-H6j" secondAttribute="trailing" id="4My-7g-Dch"/>
+                            <constraint firstAttribute="bottom" secondItem="un1-on-961" secondAttribute="bottom" id="GuT-Qb-Z4q"/>
+                            <constraint firstItem="un1-on-961" firstAttribute="leading" secondItem="PhK-xf-Qbz" secondAttribute="leading" id="Ts0-OG-MdV"/>
                             <constraint firstItem="OOx-MC-H6j" firstAttribute="leading" secondItem="PhK-xf-Qbz" secondAttribute="leading" id="aMC-d2-Czc"/>
                             <constraint firstAttribute="bottom" secondItem="OOx-MC-H6j" secondAttribute="bottom" id="gP7-F0-Vja"/>
                             <constraint firstItem="OOx-MC-H6j" firstAttribute="top" secondItem="PhK-xf-Qbz" secondAttribute="top" id="wqq-GE-zPu"/>
+                            <constraint firstAttribute="trailing" secondItem="un1-on-961" secondAttribute="trailing" id="xLQ-uV-wBA"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="LYn-ew-AeZ">
@@ -199,6 +232,8 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="actionButton" destination="uV6-5u-Nrk" id="Rnf-It-c1g"/>
+                        <outlet property="blurView" destination="un1-on-961" id="scJ-Sf-hWP"/>
                         <outlet property="webArticle" destination="OOx-MC-H6j" id="sZk-Hk-qcN"/>
                     </connections>
                 </viewController>
